docs/1.0/_sources/api/gammapy.maps.MapCoord.rst.txt
MapCoord
========

.. currentmodule:: gammapy.maps

.. autoclass:: MapCoord
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~MapCoord.broadcasted
      ~MapCoord.flat
      ~MapCoord.frame
      ~MapCoord.lat
      ~MapCoord.lon
      ~MapCoord.match_by_name
      ~MapCoord.ndim
      ~MapCoord.phi
      ~MapCoord.shape
      ~MapCoord.size
      ~MapCoord.skycoord
      ~MapCoord.theta

   .. rubric:: Methods Summary

   .. autosummary::

      ~MapCoord.apply_mask
      ~MapCoord.copy
      ~MapCoord.create
      ~MapCoord.to_frame

   .. rubric:: Attributes Documentation

   .. autoattribute:: broadcasted
   .. autoattribute:: flat
   .. autoattribute:: frame
   .. autoattribute:: lat
   .. autoattribute:: lon
   .. autoattribute:: match_by_name
   .. autoattribute:: ndim
   .. autoattribute:: phi
   .. autoattribute:: shape
   .. autoattribute:: size
   .. autoattribute:: skycoord
   .. autoattribute:: theta

   .. rubric:: Methods Documentation

   .. automethod:: apply_mask
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: to_frame
